--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,9 @@
     <name>junit_app</name>
     <description>Blank project for GraalVM</description>
 
-
+<properties>
+    <java.version>1.8</java.version>
+</properties>
 
     <dependencies>
         <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter -->
@@ -22,6 +24,18 @@
 </dependency>
         
     </dependencies>
+    
+    <build>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>3.0.0-M5</version>
+        </plugin>
+      </plugins>
+    </pluginManagement>
+  </build>
 
         
 </project>
